Début du crud pour les bookshelf
